--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "flux": "^3.1.3",
     "prop-types": "^15.6.0",
-    "react": "^16.1.1",
+    "react": "15.6.2",
     "react-addons-perf": "^15.4.2",
-    "react-dom": "^16.1.1",
+    "react-dom": "15.6.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2"
