--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "15.6.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
